# Agentic-AI

./: README.md  pyproject.toml
UV/: README.md
UV/project-1/: README.md
src/project_1/: __init__.py  hello.py
