[project]
name = "project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Mazher Khan", email = "muhammadmazher@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
project-1 = "project_1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
